--- a/Source/BlueCMS.Core/BlueCMS.Core.csproj
+++ b/Source/BlueCMS.Core/BlueCMS.Core.csproj
@@ -47,6 +47,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libs\HedgehogDevelopment.CodeGeneration.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Sitecore.Kernel">
+      <HintPath>..\..\Libs\Sitecore7.2Rev.140526\Sitecore.Kernel.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
